--- a/app/src/main/res/layout/signup_page.xml
+++ b/app/src/main/res/layout/signup_page.xml
@@ -54,7 +54,8 @@
                 android:id="@+id/number_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName" />
+                android:inputType="phone"
+                android:digits="0123456789+"  />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -76,7 +77,7 @@
                 android:id="@+id/email_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName" />
+                android:inputType="textEmailAddress"  />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -140,7 +141,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textField4"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            app:strokeWidth="2dp" />
 
         <TextView
             android:id="@+id/textView73"
